--- a/Decisao/decisao.html
+++ b/Decisao/decisao.html
@@ -21,7 +21,7 @@
                     <h6 id="lbl_clientes"><a href="#" class="cadastro_id">Cliente</a></h6>
                     <h6><a href="#" class="cadastro_id">Empresa</a></h6>
                 </div>
-                    <a href="/BuffEat/Login/index.html"><button type="submit" name="submit" class="button_submit">RETORNAR</button></a>
+                    <a href="../Login/index.html"><button type="submit" name="submit" class="button_submit">RETORNAR</button></a>
                 </div>
         </div>
     </div>
