--- a/Login/index.html
+++ b/Login/index.html
@@ -22,10 +22,10 @@
                             <input type="checkbox">
                             <span class="checkmark"></span>
                         </label>
-                        <label class="login_senha"><a href="/BuffEat/RecSenha/recsenha.html" class="none_senha"><B>Esqueceu a senha?</B></a></label>
+                        <label class="login_senha"><a href="../RecSenha/recsenha.html" class="none_senha"><B>Esqueceu a senha?</B></a></label>
                     </div>
                     <button type="submit" name="submit" class="button_submit">ENTRAR</button>
-                    <label class="login_inscrever"><a href="/BuffEat/Decisao/decisao.html" class="none_inscrever" >Não tem uma conta? <B>Inscreva-se!</B></a></label>
+                    <label class="login_inscrever"><a href="../Decisao/decisao.html" class="none_inscrever" >Não tem uma conta? <B>Inscreva-se!</B></a></label>
                     <div id="container_gmail">
                         <img src="img/Icon_Google.svg" width="25px">
                         <label class="login_gmail">LOGAR COM O GMAIL</label>
