--- a/RecSenha/recsenha.html
+++ b/RecSenha/recsenha.html
@@ -23,7 +23,7 @@
             <button type="submit" name="submit" class="button_enviar">ENVIAR</button>
             </div>
         </div>
-        <a href="/BuffEat/Login/index.html"><button type="submit" name="submit" class="button_submit">RETORNAR</button></a>
+        <a href="../Login/index.html"><button type="submit" name="submit" class="button_submit">RETORNAR</button></a>
         </div>
     </div>
 </body>
