--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BuffEats</title>
     <link rel="icon" type="image/x-icon">
-    <link rel="stylesheet" href="/interno_landing/landingpage.css">
+    <link rel="stylesheet" href="../BuffeEats-main/interno_landing/landingpage.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
                 <span class="landing_title">Vai rolar festinha?</span>
                 <span class="landing_title">Chama no Buff<a>Eats</a>!</span>
                 <span class="landing_subtitle">Com a BuffEats você pode escolher buffets<br>de qualidade e com preços justos.</span>
-                <div class="row"">
+                <div class="row">
                 <button type="submit" name="submit" id="recuperar" class="small_button">
                 Tenho interesse!
                     </button>
