--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 <span class="landing_title">Chama no Buff<a>Eats</a>!</span>
                 <span class="landing_subtitle">Com a BuffEats você pode escolher buffets<br>de qualidade e com preços justos.</span>
                 <div class="row"">
-                <button type="submit" name="submit" id="recuperar" class="small_button">
+                <a href="src/home/Deslogado/index.php" id="recuperar" class="small_button">
                 Tenho interesse!
-                    </button>
+                </a>
                 </div>
         </div>
     </main>
