--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BuffEats</title>
     <link rel="icon" type="image/x-icon">
-    <link rel="stylesheet" href="/interno_landing/landingpage.css">
+    <link rel="stylesheet" href="../BuffeEats-main/interno_landing/landingpage.css">
 </head>
 
 <body>
