--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BuffEats</title>
-    <link rel="icon" type="image/x-icon">
+    <link rel="icon" type="image/x-icon" href="../BuffeEats-main/interno_landing/img/icon.png">
     <link rel="stylesheet" href="../BuffeEats-main/interno_landing/landingpage.css">
 </head>
 
