--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="interno_landing/landingpage.css">
     <title>BuffEats</title>
-    <link rel="icon" type="image/x-icon" href="../BuffeEats-main/interno_landing/img/icon.png">
-    <link rel="stylesheet" href="../BuffeEats-main/interno_landing/landingpage.css">
+    <link rel="icon" type="image/x-icon">
 </head>
 
 <body>
@@ -17,9 +17,9 @@
                 <span class="landing_title">Chama no Buff<a>Eats</a>!</span>
                 <span class="landing_subtitle">Com a BuffEats você pode escolher buffets<br>de qualidade e com preços justos.</span>
                 <div class="row">
-                <button type="submit" name="submit" id="recuperar" class="small_button">
+                <a href="src/home/Deslogado/index.php" id="recuperar" class="small_button">
                 Tenho interesse!
-                    </button>
+                </a>
                 </div>
         </div>
     </main>
