--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="interno_landing/landingpage.css">
     <title>BuffEats</title>
-    <link rel="icon" type="image/x-icon">
+    <link rel="icon" type="image/x-icon" href="../BuffeEats/interno_landing/img/icon.png">
 </head>
 
 <body>
