Versão mais atualizada feita na aula de PIT

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="interno_landing/landingpage.css">
-    <title>BuffEats</title>
+    <title>BuffEats|Início</title>
     <link rel="icon" type="image/x-icon" href="../BuffeEats/interno_landing/img/icon.png">
 </head>
 
@@ -17,7 +17,7 @@
                 <span class="landing_title">Chama no Buff<a>Eats</a>!</span>
                 <span class="landing_subtitle">Com a BuffEats você pode escolher buffets<br>de qualidade e com preços justos.</span>
 
-                <a href="src/home/Deslogado/index.php" id="recuperar" class="small_button">
+                <a href="src/home/Deslogado/home-deslogado.php" id="recuperar" class="small_button">
                 Tenho interesse!
                 </a>
                 </div>
